@@ -338,6 +338,7 @@ my %xkbsym_table = (
     'Z' => '005a',
     'bracketleft' => '005b',
     'backslash' => '005c',
+    'backlash' => '005c',   # Is this recognised by X ? (speling error)
     'bracketright' => '005d',
     'asciicircum' => '005e',
     'underscore' => '005f',
@@ -370,6 +371,7 @@ my %xkbsym_table = (
     'y' => '0079',
     'z' => '007a',
     'braceleft' => '007b',
+    'pipe' => '007c', # Is this recognised by X ?
     'bar' => '007c',
     'braceright' => '007d',
     'asciitilde' => '007e',
@@ -1971,7 +1973,10 @@ my %xkbsym_table = (
     'ISO_Last_Group' => 'ShiftL_Lock',
     'ISO_Last_Group_Lock' => 'ShiftL_Lock',
 # Other symbols
+    'NoAction' => 'NoSymbol', # Is this recognised by X ?
+    'nosymbol' => 'NoSymbol', # Is this recognised by X ?
     'Nosymbol' => 'NoSymbol', # Is this recognised by X ?
+    'noSymbol' => 'NoSymbol', # Is this recognised by X ?
     'NoSymbol' => 'NoSymbol',
     'any' => 'NoSymbol', # Is this recognised by X ?
     'VoidSymbol' => 'VoidSymbol',
@@ -2088,8 +2093,8 @@ my %xkbsym_table = (
     'XF86_Next_VMode' => 'VoidSymbol',
     'XF86_Prev_VMode' => 'VoidSymbol',
 # I do not know the Unicodes of these
+    '0x13a4' => 'VoidSymbol', # Special symbol for X?
     'leftcaret' => 'VoidSymbol', # Is this recognised by X ?
-    '0x13a4' => 'VoidSymbol', # Spelling error ?
     'guj_rra' => 'VoidSymbol', # Is this recognised by X ?
     'guj_nnna' => 'VoidSymbol', # Is this recognised by X ?
     'guj_llla' => 'VoidSymbol', # Is this recognised by X ?
@@ -2099,6 +2104,17 @@ my %xkbsym_table = (
     'Eisu_toggle' => 'VoidSymbol', # Is this recognised by X ?
     'Zenkaku_Hankaku' => 'VoidSymbol', # Is this recognised by X ?
     'Kanji' => 'VoidSymbol', # Is this recognised by X ?
+    'Hangul' => 'VoidSymbol', # Is this recognised by X ?
+    'braille_dot_1' => 'VoidSymbol', # Is this recognised by X ?
+    'braille_dot_2' => 'VoidSymbol', # Is this recognised by X ?
+    'braille_dot_3' => 'VoidSymbol', # Is this recognised by X ?
+    'braille_dot_4' => 'VoidSymbol', # Is this recognised by X ?
+    'braille_dot_5' => 'VoidSymbol', # Is this recognised by X ?
+    'braille_dot_6' => 'VoidSymbol', # Is this recognised by X ?
+    'braille_dot_7' => 'VoidSymbol', # Is this recognised by X ?
+    'braille_dot_8' => 'VoidSymbol', # Is this recognised by X ?
+    'braille_dot_9' => 'VoidSymbol', # Is this recognised by X ?
+    'braille_dot_10' => 'VoidSymbol', # Is this recognised by X ?
 # XFree86 does not recognise these
     'SunAudioLowerVolume' => 'VoidSymbol',
     'SunAudioMute' => 'VoidSymbol',
