@@ -5,8 +5,14 @@ console-setup (1.24) UNRELEASED; urgency=low
     Never use ShiftR.  Thanks to Alexander E. Patrakov, closes: #484822.
   * Improved support for non 'KP_...' keys in the keypad block.
   * Remove dh_installxfonts from debian/rules.
-  
- -- Anton Zinoviev <zinoviev@debian.org>  Sun, 08 Jun 2008 23:47:55 +0300
+  * Support for some new X key symbols (some of them spelling errors).
+  * Debconf support for grp:alt_caps_toggle, grp:lctrl_lshift_toggle,
+    grp:sclk_toggle, lv3:alt_switch, lv3:enter_switch, compose:lwin
+  * Removed debconf support for grp:alts_toggle, grp:ctrls_toggle,
+    grp:shifts_toggle, grp:shift_caps_toggle as it is impossible to
+    support them on the console.
+    
+ -- Anton Zinoviev <zinoviev@debian.org>  Sun, 08 Jun 2008 17:51:34 +0300
 
 console-setup (1.23) unstable; urgency=low
 
